{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 161,
  "lineage": "2d3d2393-2ada-2ad2-3ccd-17bb3a455154",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_default_route_table_association_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054d67845947f32c4",
            "route_table_id": "rtb-011ec5a77a240fb85",
            "subnet_id": "subnet-0eaf9fcd0c81424ba"
          },
          "dependencies": [
            "module.eks.aws_subnet.eks_subnet_primary",
            "module.eks.data.aws_availability_zones.available",
            "module.eks.random_string.suffix",
            "module.vpc.aws_internet_gateway.vpc_internet_gateway",
            "module.vpc.aws_route_table.vpc_default_route_table",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_default_route_table_association_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5bccbc2733484a3",
            "route_table_id": "rtb-011ec5a77a240fb85",
            "subnet_id": "subnet-03c85b431ea70bd18"
          },
          "dependencies": [
            "module.eks.aws_subnet.eks_subnet_secondary",
            "module.eks.data.aws_availability_zones.available",
            "module.eks.random_string.suffix",
            "module.vpc.aws_internet_gateway.vpc_internet_gateway",
            "module.vpc.aws_route_table.vpc_default_route_table",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039851540970:security-group/sg-0e3ce0d1a95e7fb30",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3ce0d1a95e7fb30",
            "ingress": [
              {
                "cidr_blocks": [
                  "90.70.41.95/32"
                ],
                "description": "Allow Terraform to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sg_eks-eu-west-3-g6L83hUK",
            "name_prefix": "",
            "owner_id": "039851540970",
            "revoke_rules_on_delete": false,
            "tags": {
              "service": "eks"
            },
            "tags_all": {
              "service": "eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fe3e381078f8246"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.random_string.suffix",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_sg_rule_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "90.70.41.95/32"
            ],
            "description": "Allow Terraform to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-2808514787",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e3ce0d1a95e7fb30",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.eks_sg",
            "module.eks.data.http.my_public_ip",
            "module.eks.random_string.suffix",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_subnet_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039851540970:subnet/subnet-0eaf9fcd0c81424ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eaf9fcd0c81424ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "039851540970",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/eks-eu-west-3-g6L83hUK": "owned",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "service": "eks"
            },
            "tags_all": {
              "kubernetes.io/cluster/eks-eu-west-3-g6L83hUK": "owned",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "service": "eks"
            },
            "vpc_id": "vpc-04fe3e381078f8246"
          },
          "dependencies": [
            "module.eks.data.aws_availability_zones.available",
            "module.eks.random_string.suffix",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_subnet_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039851540970:subnet/subnet-03c85b431ea70bd18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c85b431ea70bd18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "039851540970",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/eks-eu-west-3-g6L83hUK": "owned",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "service": "eks"
            },
            "tags_all": {
              "kubernetes.io/cluster/eks-eu-west-3-g6L83hUK": "owned",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "service": "eks"
            },
            "vpc_id": "vpc-04fe3e381078f8246"
          },
          "dependencies": [
            "module.eks.data.aws_availability_zones.available",
            "module.eks.random_string.suffix",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.helm",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "pypi_server_namespace",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "pypi",
            "metadata": [
              {
                "generation": 0,
                "name": "pypi",
                "resource_version": "6286",
                "uid": "f9c19f18-a2db-4a12-a708-243bb8ae7412"
              }
            ]
          },
          "dependencies": [
            "module.eks.aws_eks_cluster.eks_cluster",
            "module.eks.aws_iam_role.eks_iam_role_cluster",
            "module.eks.aws_iam_role_policy_attachment.eks_iam_role_policy_attachments_cluster",
            "module.eks.aws_subnet.eks_subnet_primary",
            "module.eks.aws_subnet.eks_subnet_secondary",
            "module.eks.data.aws_availability_zones.available",
            "module.eks.data.aws_iam_policy.eks_iam_policy_cluster",
            "module.eks.random_string.suffix",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039851540970:internet-gateway/igw-00457b39c1a413f1a",
            "id": "igw-00457b39c1a413f1a",
            "owner_id": "039851540970",
            "vpc_id": "vpc-04fe3e381078f8246"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_default_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039851540970:route-table/rtb-011ec5a77a240fb85",
            "id": "rtb-011ec5a77a240fb85",
            "owner_id": "039851540970",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00457b39c1a413f1a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04fe3e381078f8246"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.vpc_internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:039851540970:vpc/vpc-04fe3e381078f8246",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-069136d00d65eff4c",
            "default_route_table_id": "rtb-0fffeac5a8880172d",
            "default_security_group_id": "sg-0f7a040c2f8621562",
            "dhcp_options_id": "dopt-0c71d3dc5e3d166d3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04fe3e381078f8246",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fffeac5a8880172d",
            "owner_id": "039851540970"
          }
        }
      ]
    }
  ]
}